/*
 * Copyright 2014 Square Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package squareup.protos.interceptors;

import "google/protobuf/descriptor.proto";

option java_package = "com.squareup.wire.protos.interceptors";

extend google.protobuf.MessageOptions {
  optional bool encrypt_payload = 60000;
}

extend google.protobuf.FieldOptions {
  optional bool encrypted = 60001;
}

message Plaintext {
  optional string name = 1;
  optional string payload = 2;
}

message Encrypted {
  option encrypt_payload = true;

  optional string name = 1;
  optional string payload = 2;
}

message Unencrypted {
  option encrypt_payload = false;

  optional string name = 1;
  optional string payload = 2;
}

message EncryptedField {
  optional string name = 1;
  optional string payload = 2 [encrypted = true];
}

message Outer {
  optional Plaintext plaintext = 1;
  optional Unencrypted unencrypted = 2;
  repeated Encrypted encrypted = 3;
  optional EncryptedField encrypted_field = 4;
}
